create auth api register,login,logout and show swagger
